--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@
 /android/
 *.tmp
 release/
+.nomedia
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_credentials.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
